Ensure that the buttons do not overlap on the event list.

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -115,7 +115,7 @@
       font-weight: bolder;
     }
     .top-part-wrapper {
-      height: 260px;
+      height: 290px;
     }
     .bar-outer-wrapper {
       position: relative;
